--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.2.10",
     "localforage": "^1.10.0",
     "lucide-react": "^0.341.0",
     "match-sorter": "^6.3.4",
@@ -39,7 +40,9 @@
     "react-router-dom": "^6.22.1",
     "react-starfield": "^1.0.3",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sort-by": "^1.2.0",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
